--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -445,7 +445,8 @@ input#menu:checked ~ #menu-content{
 
     #headers {
         margin-top: 6rem;
-        flex-direction: column; 
+        flex-direction: column;
+        display: block; 
     }
 
     #headers header *{
@@ -501,39 +502,38 @@ input#menu:checked ~ #menu-content{
 #modal button:hover{
     transform: scale(1.1); 
 }
-
 @media (max-width: 1100px){
-    
+  
     #modal[open] {
         animation: fadeIn ease .25s; 
     } 
-}
-
-@media (max-width: 1400px){
+  }
+  
+  @media (max-width: 1400px){
     
     #modal{
         font-size: 1.65rem; 
         display: flex;
         align-items: center;
     }
-
+  
     #modal h1, #modal .bold{
         text-align: center;
     }
-
+  
     #modal button{
         font-size: 1.85rem; 
     }
-
+  
     .buttonlevel{
         display: flex;
         flex-direction: column;
         width: 100%;
         align-items: center;
     }
-}
-
-@media (max-width: 1100px){
+  }
+  
+  @media (max-width: 1100px){
     
     #modal{
         font-size: 3.2rem;
@@ -545,24 +545,25 @@ input#menu:checked ~ #menu-content{
         justify-content: start;
         padding: 10px;
         padding-top: 70vh; 
+        display: none;
     }
-
+  
     #modal button{
         font-size: 3.5rem; 
     } 
-}
-
-@media (max-width: 500px){
-
+  }
+  
+  @media (max-width: 500px){
+  
     #modal{
         letter-spacing: -1px;
         font-size: 2.45rem; 
     }
-
+  
     #modal button{
         font-size: 3rem; 
     } 
-}
+  }
 
 .button{
     padding: 30px 0px;
