--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -501,10 +501,11 @@ input#menu:checked ~ #menu-content{
     background-color: transparent;
     color: white; 
     margin: 10px;
+    transition: 0.5s ease;
 }
 
 #modal button:hover{
-    transform: scale(1.1); 
+    transform: scale(1.2); 
 }
 @media (max-width: 1100px){
   
@@ -585,11 +586,13 @@ input#menu:checked ~ #menu-content{
     background-color: white;
     border: 2px solid rgba(var(--gradient-1));
     font-weight: 600;
+    transition: 0.5s ease;
 }
 
 .button button:hover{
     box-shadow: 0 10px 20px rgba(var(--text-color), 0.19),
                 0 6px 6px rgba(var(--text-color), 0.23); 
+    transform: scale(1.2);
 }
 
 #main1{
@@ -712,7 +715,7 @@ input#menu:checked ~ #menu-content{
     font-weight: bolder;
     word-break: break-all;
     text-align: center;
-    color : lightgrey;
+    color : rgba(var(--text-color), 1);
     transition: 0.5s ease;
 }
 
@@ -777,7 +780,7 @@ input#menu:checked ~ #menu-content{
 #timeGauge{
     height : 10px;
     border-radius: 10px;
-    background-color: mediumseagreen;
+    background-color: rgba(var(--gradient-1), 1);
     margin-top : -10px;
 }
 
@@ -791,7 +794,7 @@ input#menu:checked ~ #menu-content{
 .prog{
     width : 25px;
     height : 25px;
-    border: 10px solid rgba(var(--sidebar-gradient-1), 1);
+    border: 5px solid rgba(var(--gradient-1), 1);
     display: inline-block;
     border-radius: 50%;
     margin-left : 5px;
